Start creating header html structure

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,10 @@
 
 <body>
     <div id="app">
-        @@include('layouts/header.html')
-
-        <main>
-            <div class="container">
-                <h2>Velora! I'm Ready</h2>
-            </div>
-        </main>
-
-        @@include('layouts/footer.html')
+        <div class="app-wrapper">
+            <!-- .header -->
+            @@include('layouts/header.html')
+        </div>
     </div>
 
     @@include('includes/scripts.html')
