Adding navbar, hero structure

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
         <div class="app-wrapper">
             <!-- .header -->
             @@include('layouts/header.html')
+
+            <!-- .navbar -->
+            @@include('layouts/navbar.html')
+
+            <!-- .hero -->
+            @@include('layouts/hero.html')
         </div>
     </div>
 
