--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
                 <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-1.svg" data-speed="5" class="floating-img dots" alt="Hero image preview">
                 <img src="@@BASE_URL/assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8" class="floating-img red-plus" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-book-1.svg" data-speed="6" class="floating-img book" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-crown-1.svg" data-speed="-4" class="floating-img crown" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/element-book-2.svg" data-speed="6" class="floating-img book" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="floating-img crown" alt="Hero image preview">
                 <img src="@@BASE_URL/assets/images/abstracts/shape-1.png" data-speed="-4" class="floating-img circle" alt="Hero image preview">
             </div>
         </div>
