Adding hero video preview

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
 
 
     @@include('components/offcanvas.html')
+    @@include('components/modal.html')
     @@include('includes/scripts.html')
 </body>
 
