--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,15 @@
                 <img src="@@BASE_URL/assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="floating-img crown" alt="Hero image preview">
                 <img src="@@BASE_URL/assets/images/abstracts/shape-1.png" data-speed="-4" class="floating-img circle" alt="Hero image preview">
             </div>
+
+            <!-- Section: About -->
+            @@include('sections/section-about.html')
+
+            <!-- Section: Courses Category -->
+            @@include('sections/section-courses-category.html')
+
+            <!-- Section: Features -->
+            @@include('sections/section-features.html')
         </div>
     </div>
 
