حل عدد من المشكلات بالهيرو في شاشات الموبايل

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div class="section-image">
-                    <img src="@@BASE_URL/assets/images/home/welcome-img.png" alt="Welcome Image">
+                    <img src="@@BASE_URL/assets/images/home/welcome-img.png" class="w-100" alt="Welcome Image">
                     <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-2.svg" alt="SVG Shape">
                     <img src="@@BASE_URL/assets/images/abstracts/abstract-golden-1.svg" alt="SVG Shape">
                 </div>
