--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -1,6 +1,6 @@
 <section class="section courses-category">
     <div class="container">
-        <div class="section-header d-flex">
+        <div class="section-header d-lg-flex">
             <div class="flex-shrink-0">
                 <h6 class="subtitle">Course Categories</h6>
                 <h3 class="title">
