تصحيح بعض التنسيقات والانتهاء من تنسيق الاقسام الثلاثة الاولي

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,11 +1,11 @@
 <section class="section about">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 order-2 order-lg-1">
                 <div class="section-image">
                     <img src="@@BASE_URL/assets/images/home/welcome-img.png" alt="Welcome Image">
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-2.svg" class="abs" alt="SVG Shape">
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-golden-1.svg" class="abs" alt="SVG Shape">
+                    <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right" alt="SVG Shape">
+                    <img src="@@BASE_URL/assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-up-down" alt="SVG Shape">
                 </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -16,7 +16,7 @@
                             Digital Online Academy: Your Path to Creative Excellence
                         </h3>
                     </div>
-                    <div class="section-content">
+                    <div class="section-content position-relative">
                         <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
                         <ul>
                             <li>
@@ -44,7 +44,12 @@
                                 Lifetime Access
                             </li>
                         </ul>
-                        <img src="@@BASE_URL/assets/images/abstracts/abstract-circle-wave.svg" alt="SVG Shape">
+
+                        <a href="html/course-1.html" class="button button-lg button-outline-dark mt-4">
+                            Discover More
+                            <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
+                        </a>
+                        <img src="@@BASE_URL/assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale" alt="SVG Shape">
                     </div>
                 </div>
             </div>
