--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -1,13 +1,13 @@
 <section class="section courses-category">
     <div class="container">
-        <div class="section-header d-lg-flex">
+        <div class="section-header d-lg-flex text-center text-lg-start">
             <div class="flex-shrink-0">
                 <h6 class="subtitle">Course Categories</h6>
                 <h3 class="title">
                     Top Categories You Want to Learn
                 </h3>
             </div>
-            <div class="flex-grow-1 text-end align-self-center">
+            <div class="flex-grow-1 text-lg-end align-self-center mb-2">
                 <a href="#" class="button button-main">
                     Find Courses
                     <span>
