الانتهاء من تكوريد المرحلة الاولي لقسم الكورسات

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,9 @@
 
             <!-- Section: Features -->
             @@include('sections/section-features.html')
+
+            <!-- Section: Courses -->
+            @@include('sections/section-courses.html')
         </div>
     </div>
 
