تكويد قسم ليه تختارنا؟

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
 
             <!-- Section: Courses -->
             @@include('sections/section-courses.html')
+
+            <!-- Section: Why Choose Us -->
+            @@include('sections/section-choose-us.html')
         </div>
     </div>
 
