--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
                 <!-- .hero -->
                 @@include('layouts/hero.html')
 
-                <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-1.svg" data-speed="5" class="abs v-animate move-up-down dots" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8" class="abs v-animate move-left-right red-plus" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-book-2.svg" data-speed="6" class="abs v-animate  book" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="abs v-animate diagonalMove crown" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/shape-1.png" data-speed="-4" class="abs v-animate rotateScale circle" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-1.svg" data-speed="5" class="abs parallax-effect v-animate move-up-down dots" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8" class="abs parallax-effect v-animate move-left-right red-plus" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/element-book-2.svg" data-speed="6" class="abs parallax-effect v-animate  book" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="abs parallax-effect v-animate diagonalMove crown" alt="Hero image preview">
+                <img src="@@BASE_URL/assets/images/abstracts/shape-1.png" data-speed="-4" class="abs parallax-effect v-animate rotateScale circle" alt="Hero image preview">
             </div>
 
             <!-- Section: About -->
@@ -43,6 +43,12 @@
 
             <!-- Section: Why Choose Us -->
             @@include('sections/section-choose-us.html')
+
+            <!-- Section: Our Statistics -->
+            @@include('sections/section-statistics.html')
+
+            <!-- Section: Brands -->
+            @@include('sections/section-brands.html')
         </div>
     </div>
 
