الانتهاء من تنسيقات قسم الميزات

--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -45,16 +45,15 @@
                     <img src="@@BASE_URL/assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
                         <div class="icon me-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="text-amerald" width="48" height="48" viewBox="0 0 512 512">
-                                <path fill="currentColor" d="m368 350.643l-112 63l-112-63v-66.562l-32-17.778v103.054l144 81l144-81V266.303l-32 17.778z" />
-                                <path fill="currentColor" d="M256 45.977L32 162.125v27.734L256 314.3l192-106.663V296h32V162.125Zm160 142.831l-32 17.777L256 277.7l-128-71.115l-32-17.777l-22.179-12.322L256 82.023l182.179 94.463Z" />
-                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" class="text-amber mb-2" width="64" height="64" viewBox="0 0 24 24"><path fill="currentColor" d="M6 20c1.1 0 2-.9 2-2v-7c0-1.1-.9-2-2-2s-2 .9-2 2v7c0 1.1.9 2 2 2m10-5v3c0 1.1.9 2 2 2s2-.9 2-2v-3c0-1.1-.9-2-2-2s-2 .9-2 2m-4 5c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2s-2 .9-2 2v12c0 1.1.9 2 2 2"/></svg>
                         </div>
                         <div class="text">
                             <h6><span class="odometer" data-value="8540">0</span>K+</h6>
                             <p class="mb-0">Satisfied Students</p>
                         </div>
                     </div>
+                    <img src="@@BASE_URL/assets/images/abstracts/abstract-shape-3.png" class="v-animate rotate-scale" alt="Shap">
+                    <img src="@@BASE_URL/assets/images/abstracts/abstract-shape-2.png" class="v-animate move-up-down" alt="Shap">
                 </div>
             </div>
         </div>
