Improve project process

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-12 col-lg-6 order-1 order-lg-0">
                 <div class="section-image">
-                    <img src="@@BASE_URL/assets/images/home/welcome-img.png" alt="Welcome Image">
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right" alt="SVG Shape">
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-up-down" alt="SVG Shape">
+                    <img src="assets/images/home/welcome-img.png" alt="Welcome Image">
+                    <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right" alt="SVG Shape">
+                    <img src="assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-up-down" alt="SVG Shape">
                 </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -49,7 +49,7 @@
                             Discover More
                             <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
                         </a>
-                        <img src="@@BASE_URL/assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale" alt="SVG Shape">
+                        <img src="assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale" alt="SVG Shape">
                     </div>
                 </div>
             </div>
