--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -42,7 +42,7 @@
 
             <div class="col-12 col-lg-6 offset-lg-1">
                 <div class="section-image text-start">
-                    <img src="@@BASE_URL/assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
+                    <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
                         <div class="icon me-3">
                             <svg xmlns="http://www.w3.org/2000/svg" class="text-amber mb-2" width="64" height="64" viewBox="0 0 24 24"><path fill="currentColor" d="M6 20c1.1 0 2-.9 2-2v-7c0-1.1-.9-2-2-2s-2 .9-2 2v7c0 1.1.9 2 2 2m10-5v3c0 1.1.9 2 2 2s2-.9 2-2v-3c0-1.1-.9-2-2-2s-2 .9-2 2m-4 5c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2s-2 .9-2 2v12c0 1.1.9 2 2 2"/></svg>
@@ -52,8 +52,8 @@
                             <p class="mb-0">Satisfied Students</p>
                         </div>
                     </div>
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-shape-3.png" class="v-animate rotate-scale" alt="Shap">
-                    <img src="@@BASE_URL/assets/images/abstracts/abstract-shape-2.png" class="v-animate move-up-down" alt="Shap">
+                    <img src="assets/images/abstracts/abstract-shape-3.png" class="v-animate rotate-scale" alt="Shap">
+                    <img src="assets/images/abstracts/abstract-shape-2.png" class="v-animate move-up-down" alt="Shap">
                 </div>
             </div>
         </div>
