--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velora - Online Courses Bootstrap Template</title>
 
-    @@include('includes/head.html')
+    @@include('html/includes/head.html')
 </head>
 
 <body>
@@ -14,48 +14,48 @@
         <div class="app-wrapper">
             <div class="app-header">
                 <!-- .header -->
-                @@include('layouts/header.html')
+                @@include('html/layouts/header.html')
     
                 <!-- .navbar --> 
-                @@include('layouts/navbar.html')
+                @@include('html/layouts/navbar.html')
     
                 <!-- .hero -->
-                @@include('layouts/hero.html')
+                @@include('html/layouts/hero.html')
 
-                <img src="@@BASE_URL/assets/images/abstracts/abstract-dots-1.svg" data-speed="5" class="abs parallax-effect v-animate move-up-down dots" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8" class="abs parallax-effect v-animate move-left-right red-plus" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-book-2.svg" data-speed="6" class="abs parallax-effect v-animate  book" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="abs parallax-effect v-animate diagonalMove crown" alt="Hero image preview">
-                <img src="@@BASE_URL/assets/images/abstracts/shape-1.png" data-speed="-4" class="abs parallax-effect v-animate rotateScale circle" alt="Hero image preview">
+                <img src="assets/images/abstracts/abstract-dots-1.svg" data-speed="5" class="abs parallax-effect v-animate move-up-down dots" alt="Hero image preview">
+                <img src="assets/images/abstracts/abstract-red-plus-1.svg" data-speed="8" class="abs parallax-effect v-animate move-left-right red-plus" alt="Hero image preview">
+                <img src="assets/images/abstracts/element-book-2.svg" data-speed="6" class="abs parallax-effect v-animate  book" alt="Hero image preview">
+                <img src="assets/images/abstracts/element-crown-2.png" width="100" data-speed="-4" class="abs parallax-effect v-animate diagonalMove crown" alt="Hero image preview">
+                <img src="assets/images/abstracts/shape-1.png" data-speed="-4" class="abs parallax-effect v-animate rotateScale circle" alt="Hero image preview">
             </div>
 
             <!-- Section: About -->
-            @@include('sections/section-about.html')
+            @@include('html/sections/section-about.html')
 
             <!-- Section: Courses Category -->
-            @@include('sections/section-courses-category.html')
+            @@include('html/sections/section-courses-category.html')
 
             <!-- Section: Features -->
-            @@include('sections/section-features.html')
+            @@include('html/sections/section-features.html')
 
             <!-- Section: Courses -->
-            @@include('sections/section-courses.html')
+            @@include('html/sections/section-courses.html')
 
             <!-- Section: Why Choose Us -->
-            @@include('sections/section-choose-us.html')
+            @@include('html/sections/section-choose-us.html')
 
             <!-- Section: Our Statistics -->
-            @@include('sections/section-statistics.html')
+            @@include('html/sections/section-statistics.html')
 
             <!-- Section: Brands -->
-            @@include('sections/section-brands.html')
+            @@include('html/sections/section-brands.html')
         </div>
     </div>
 
 
-    @@include('components/offcanvas.html')
-    @@include('components/modal.html')
-    @@include('includes/scripts.html')
+    @@include('html/components/offcanvas.html')
+    @@include('html/components/modal.html')
+    @@include('html/includes/scripts.html')
 </body>
 
 </html>
