--- a/src/html/pages/about.html
+++ b/src/html/pages/about.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velora - Online Courses Bootstrap Template</title>
 
-    @@include('includes/head.html')
+    @@include('html/includes/head.html')
 </head>
 <body>
     <div id="app">
         <div class="container">
-            @@include('layouts/header.html')
+            @@include('html/layouts/header.html')
 
             <h2>About Page Template!!</h2>
             
-            @@include('layouts/header.html')
+            @@include('html/layouts/header.html')
         </div>
     </div>
 
-    @@include('includes/scripts.html')
+    @@include('html/includes/scripts.html')
 </body>
 </html>
