--- a/src/html/sections/section-brands.html
+++ b/src/html/sections/section-brands.html
@@ -4,19 +4,19 @@
         <div class="swiper brand-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="@@BASE_URL/assets/images/brands/brand-1.png" alt="Brand 1">
+                    <img src="assets/images/brands/brand-1.png" alt="Brand 1">
                 </div>
                 <div class="swiper-slide">
-                    <img src="@@BASE_URL/assets/images/brands/brand-2.png" alt="Brand 2">
+                    <img src="assets/images/brands/brand-2.png" alt="Brand 2">
                 </div>
                 <div class="swiper-slide">
-                    <img src="@@BASE_URL/assets/images/brands/brand-3.png" alt="Brand 3">
+                    <img src="assets/images/brands/brand-3.png" alt="Brand 3">
                 </div>
                 <div class="swiper-slide">
-                    <img src="@@BASE_URL/assets/images/brands/brand-4.png" alt="Brand 4">
+                    <img src="assets/images/brands/brand-4.png" alt="Brand 4">
                 </div>
                 <div class="swiper-slide">
-                    <img src="@@BASE_URL/assets/images/brands/brand-5.png" alt="Brand 5">
+                    <img src="assets/images/brands/brand-5.png" alt="Brand 5">
                 </div>
             </div>
         </div>
