--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -9,7 +9,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-1.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-1.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
@@ -63,7 +63,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-2.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-2.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
@@ -119,7 +119,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-3.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-3.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
@@ -175,7 +175,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-4.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-4.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
@@ -231,7 +231,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-5.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-5.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
@@ -287,7 +287,7 @@
                 <div class="col-12 col-lg-4">
                     <div class="card course-card-item">
                         <div class="image">
-                            <img src="@@BASE_URL/assets/images/courses/course-img-6.jpg" alt="Course Image">
+                            <img src="assets/images/courses/course-img-6.jpg" alt="Course Image">
                         </div>
                         <div class="detail">
                             <div class="meta">
