Create a dynamic page title

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velora - Online Courses Bootstrap Template</title>
 
-    @@include('html/includes/head.html')
+    @@include('html/includes/head.html', {pagetitle: 'Online Courses Bootstrap Template'})
 </head>
 
 <body>
