Refactored main.js and integrated Lenis and WOW.js

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,5 +1,5 @@
-<section class="section about">
-    <div class="container">
+<section class="section about wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+    <div class="container"> 
         <div class="row">
             <div class="col-12 col-lg-6 order-1 order-lg-0">
                 <div class="section-image">
