--- a/src/html/sections/section-brands.html
+++ b/src/html/sections/section-brands.html
@@ -1,4 +1,4 @@
-<section class="section brands">
+<section class="section brands wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <p>Get in touch with the <strong>250+</strong> companies who Collaboration us</p>
         <div class="swiper brand-slider">
