--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -1,4 +1,4 @@
-<section class="section courses-category">
+<section class="section courses-category wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s"">
     <div class="container">
         <div class="section-header d-lg-flex text-center text-lg-start">
             <div class="flex-shrink-0">
