--- a/src/html/sections/section-features.html
+++ b/src/html/sections/section-features.html
@@ -1,4 +1,4 @@
-<section class="section features">
+<section class="section features wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-4">
