--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -1,4 +1,4 @@
-<section class="section statistics">
+<section class="section statistics wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6">
