Statistics section completed

--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -1,34 +1,38 @@
 <section class="section statistics wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-lg-6">
-                <div class="section-image">
-
+        <div class="stats-box">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="section-image">
+                        <img src="assets/images/home/stats-img.png" alt="Image">
+                    </div>
                 </div>
-                <div class="section-text">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="stats-item">
-                                <h6>5,624+</h6>
-                                <span>Student Enrolled</span>
+                <div class="col-12 col-lg-6">
+                    <div class="section-text">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="stats-item">
+                                    <h6><span class="odometer" data-value="5,624">0</span>+</h6>
+                                    <span>Student Enrolled</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="stats-item">
-                                <h6>8,497+</h6>
-                                <span>Classes Completed</span>
+                            <div class="col-6">
+                                <div class="stats-item">
+                                    <h6><span class="odometer" data-value="8,497">0</span>+</h6>
+                                    <span>Classes Completed</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="stats-item">
-                                <h6>7,554+</h6>
-                                <span>Learns Report</span>
+                            <div class="col-6">
+                                <div class="stats-item">
+                                    <h6><span class="odometer" data-value="7,554">0</span>+</h6>
+                                    <span>Learns Report</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="stats-item">
-                                <h6>2,755+</h6>
-                                <span>Top Instructurs</span>
+                            <div class="col-6">
+                                <div class="stats-item">
+                                    <h6><span class="odometer" data-value="2,755">0</span>+</h6>
+                                    <span>Top Instructurs</span>
+                                </div>
                             </div>
                         </div>
                     </div>
