Testimonial init complete

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,9 @@
 
             <!-- Section: Brands -->
             @@include('html/sections/section-brands.html')
+
+            <!-- Section: Testimonials -->
+            @@include('html/sections/section-testimonials.html')
         </div>
     </div>
 
