Some of improves

--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -13,7 +13,7 @@
                     <div class="section-header">
                         <h6 class="subtitle">Welcome To Velora</h6>
                         <h3 class="title">
-                            Digital Online Academy: Your Path to Creative Excellence
+                            Digital Online Academy: Your Path to <span class="text-main">Creative Excellence</span>
                         </h3>
                     </div>
                     <div class="section-content position-relative">
