--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -5,7 +5,7 @@
                 <div class="section-text">
                     <div class="section-header">
                         <h6 class="subtitle">Why Choose Us</h6>
-                        <h3 class="title mb-3">Transform Your Best Practice with Our Online Course</h3>
+                        <h3 class="title mb-3">Transform Your Best Practice with Our <span class="text-main">Online Course</span></h3>
                     </div>
                     <div class="section-content">
                         <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit. Excepteur sint occaecat.</p>
