--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -4,7 +4,7 @@
             <div class="flex-shrink-0">
                 <h6 class="subtitle">Course Categories</h6>
                 <h3 class="title">
-                    Top Categories You Want to Learn
+                    Top <span class="text-main">Categories</span> You Want to Learn
                 </h3>
             </div>
             <div class="flex-grow-1 text-lg-end align-self-center mb-2">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
-                    <div class="category-item">
+                    <div class="category-item bg-ice-gray">
                         <div class="icon bg-soft-amerald">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
-                    <div class="category-item">
+                    <div class="category-item bg-ice-gray">
                         <div class="icon bg-soft-red">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                 <path fill="currentColor" d="M14.005 2.003a8 8 0 0 1 3.292 15.293A8 8 0 1 1 6.711 6.71a8 8 0 0 1 7.294-4.707m-4 6a6 6 0 1 0 0 12a6 6 0 0 0 0-12m1 1v1h2v2h-4a.5.5 0 0 0-.09.992l.09.008h2a2.5 2.5 0 0 1 0 5v1h-2v-1h-2v-2h4a.5.5 0 0 0 .09-.992l-.09-.008h-2a2.5 2.5 0 0 1 0-5v-1zm3-5A6 6 0 0 0 9.52 6.016a8 8 0 0 1 8.47 8.471a6 6 0 0 0-3.986-10.484" />
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
-                    <div class="category-item">
+                    <div class="category-item bg-ice-gray">
                         <div class="icon bg-soft-cyan">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 56 56">
                                 <path fill="currentColor" d="M27.203 52.785h1.547c3.82 0 5.648-1.687 5.648-5.25v-8.46l7.313 4.241c3.094 1.782 5.484 1.055 7.383-2.25l.773-1.336c1.899-3.304 1.336-5.742-1.758-7.523l-7.289-4.219l7.29-4.218c3.07-1.782 3.656-4.196 1.734-7.5l-.75-1.313c-1.922-3.328-4.313-4.055-7.407-2.273l-7.289 4.195V8.465c0-3.563-1.828-5.25-5.648-5.25h-1.547c-3.797 0-5.625 1.687-5.625 5.25v8.414l-7.266-4.195c-3.093-1.782-5.484-1.055-7.406 2.273l-.75 1.313c-1.922 3.304-1.36 5.718 1.735 7.5l7.289 4.218l-7.313 4.22c-3.094 1.78-3.633 4.218-1.734 7.523l.773 1.335c1.899 3.305 4.29 4.032 7.383 2.25l7.289-4.242v8.461c0 3.563 1.828 5.25 5.625 5.25m.633-3.515c-1.922 0-2.531-.563-2.531-2.415V33.614c0-.445-.399-.75-.82-.492L13 39.754c-1.617.937-2.39.656-3.328-1.008l-.164-.234c-.961-1.688-.82-2.508.797-3.422l11.672-6.75c.445-.235.421-.774-.024-1.008L10.328 20.91c-1.594-.937-1.758-1.734-.82-3.422l.164-.258c.96-1.664 1.734-1.945 3.351-1.007l11.414 6.609c.422.258.868-.023.868-.516V9.145c0-1.852.609-2.414 2.53-2.414h.305c1.922 0 2.555.562 2.555 2.414v13.171c0 .493.422.774.844.516l11.414-6.61c1.617-.913 2.414-.656 3.375 1.008l.164.258c.938 1.688.774 2.485-.844 3.422l-11.601 6.422c-.446.234-.469.75-.024 1.008l11.649 6.75c1.617.914 1.781 1.734.82 3.422l-.164.234c-.937 1.664-1.734 1.945-3.352 1.008l-11.46-6.633c-.422-.258-.82.047-.82.492v13.243c0 1.851-.634 2.413-2.556 2.413Z" />
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-3">
-                    <div class="category-item">
+                    <div class="category-item bg-ice-gray">
                         <div class="icon bg-soft-violet">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                                 <path id="oouiCode0" fill="currentColor" d="M1 10.08V8.92h1.15c1.15 0 1.15 0 1.15-1.15V5a7.4 7.4 0 0 1 .09-1.3a2 2 0 0 1 .3-.7a1.84 1.84 0 0 1 .93-.68A6.4 6.4 0 0 1 6.74 2h1.18v1.15h-.86A1.32 1.32 0 0 0 6 3.62a1.7 1.7 0 0 0-.36 1.23V7a3.2 3.2 0 0 1-.28 1.72a2 2 0 0 1-1.26.77a2.15 2.15 0 0 1 1.26.79A3.26 3.26 0 0 1 5.62 12v3.15A1.67 1.67 0 0 0 6 16.37a1.31 1.31 0 0 0 1.08.47h.87V18H6.74a6.3 6.3 0 0 1-2.12-.29a1.82 1.82 0 0 1-.93-.71a1.9 1.9 0 0 1-.3-.72A7.5 7.5 0 0 1 3.31 15v-3.77c0-1.15 0-1.15-1.15-1.15zm18 0V8.92h-1.15c-1.15 0-1.15 0-1.15-1.15V5a7.4 7.4 0 0 0-.08-1.32a2 2 0 0 0-.3-.73a1.84 1.84 0 0 0-.93-.68A6.4 6.4 0 0 0 13.26 2h-1.18v1.15h.87a1.32 1.32 0 0 1 1.05.47a1.7 1.7 0 0 1 .36 1.23V7a3.2 3.2 0 0 0 .28 1.72a2 2 0 0 0 1.26.77a2.15 2.15 0 0 0-1.26.79a3.26 3.26 0 0 0-.26 1.72v3.15a1.67 1.67 0 0 1-.38 1.22a1.31 1.31 0 0 1-1.08.47h-.87V18h1.19a6.3 6.3 0 0 0 2.12-.29a1.82 1.82 0 0 0 .93-.68a1.9 1.9 0 0 0 .3-.72a7.5 7.5 0 0 0 .1-1.31v-3.77c0-1.15 0-1.15 1.15-1.15z" />
