--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="section-header">
             <h6 class="subtitle">Online Courses</h6>
-            <h3 class="title">Get Your Course With Us</h3>
+            <h3 class="title">Get Your <span class="text-main">Course</span> With Us</h3>
         </div>
         <div class="section-content">
             <div class="row">
