Fix all responsive issues

--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="stats-box">
             <div class="row">
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 d-none d-lg-block">
                     <div class="section-image">
                         <img src="assets/images/home/stats-img.png" alt="Image">
                     </div>
