--- a/src/html/sections/section-testimonials.html
+++ b/src/html/sections/section-testimonials.html
@@ -10,13 +10,13 @@
                             </h3>
                             <p class="mb-4">However, if you meant to translate an actual text (not
                                 placeholder text), please provide the original Arabic text</p>
-                            <a href="#" class="button button-lg button-main">View More</a>
+                            <a href="#" class="button button-lg button-main">View More <i class="bx bx-right-arrow-alt ms-1"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-8">
                     <div class="right-side">
-                        <img src="assets/images/home/testimonial-img.png" alt="Image">
+                        <img src="assets/images/home/testimonial-img.png" class="d-none d-lg-inline-block" alt="Image">
 
                         <div class="swiper">
                             <div class="swiper-wrapper">
