تحسينات في الريسبونسف

--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -10,25 +10,25 @@
                 <div class="col-12 col-lg-6">
                     <div class="section-text">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-12 col-lg-6">
                                 <div class="stats-item">
                                     <h6><span class="odometer" data-value="5,624">0</span>+</h6>
                                     <span>Student Enrolled</span>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-lg-6">
                                 <div class="stats-item">
                                     <h6><span class="odometer" data-value="8,497">0</span>+</h6>
                                     <span>Classes Completed</span>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-lg-6">
                                 <div class="stats-item">
                                     <h6><span class="odometer" data-value="7,554">0</span>+</h6>
                                     <span>Learns Report</span>
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-lg-6">
                                 <div class="stats-item">
                                     <h6><span class="odometer" data-value="2,755">0</span>+</h6>
                                     <span>Top Instructurs</span>
