--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,11 +1,13 @@
 <section class="section about wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
-    <div class="container"> 
+    <div class="container">
         <div class="row">
             <div class="col-12 col-lg-6 order-1 order-lg-0">
                 <div class="section-image">
                     <img src="assets/images/home/welcome-img.png" alt="Welcome Image">
-                    <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right" alt="SVG Shape">
-                    <img src="assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-up-down" alt="SVG Shape">
+                    <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right"
+                        alt="SVG Shape">
+                    <img src="assets/images/abstracts/abstract-golden-1.svg" class="abs v-animate move-up-down"
+                        alt="SVG Shape">
                 </div>
             </div>
             <div class="col-12 col-lg-6">
@@ -21,25 +23,29 @@
                         <ul>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-                                    <path fill="currentColor" d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
+                                    <path fill="currentColor"
+                                        d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
                                 </svg>
                                 Our Expert Trainers
                             </li>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-                                    <path fill="currentColor" d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
+                                    <path fill="currentColor"
+                                        d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
                                 </svg>
                                 Online Remote Learning
                             </li>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-                                    <path fill="currentColor" d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
+                                    <path fill="currentColor"
+                                        d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
                                 </svg>
                                 Easy to follow curriculum
                             </li>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-                                    <path fill="currentColor" d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
+                                    <path fill="currentColor"
+                                        d="M8.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L2.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093L8.95 4.992zm-.92 5.14l.92.92a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 1 0-1.091-1.028L9.477 9.417l-.485-.486z" />
                                 </svg>
                                 Lifetime Access
                             </li>
@@ -47,9 +53,10 @@
 
                         <a href="html/course-1.html" class="button button-lg button-outline-dark mt-4">
                             Discover More
-                            <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
+                            <i class='bx bx-right-arrow-alt ms-1'></i>
                         </a>
-                        <img src="assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale" alt="SVG Shape">
+                        <img src="assets/images/abstracts/abstract-circle-wave.svg" class="abs v-animate rotate-scale"
+                            alt="SVG Shape">
                     </div>
                 </div>
             </div>
