--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
             <!-- Footer -->
             @@include('html/layouts/footer.html')
         </div>
+
+        <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
     </div>
 
 
