--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -1,7 +1,8 @@
-<section class="section about wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
+<section class="section about wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-6 order-1 order-lg-0">
+            <div class="col-12 col-lg-6 order-1 order-lg-0 wow animate__animated animate__fadeInUp"
+                data-wow-delay="0.4s">
                 <div class="section-image">
                     <img src="assets/images/home/welcome-img.png" alt="Welcome Image">
                     <img src="assets/images/abstracts/abstract-dots-2.svg" class="abs v-animate move-left-right"
@@ -10,17 +11,20 @@
                         alt="SVG Shape">
                 </div>
             </div>
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                 <div class="section-text">
-                    <div class="section-header">
-                        <h6 class="subtitle">Welcome To Velora</h6>
-                        <h3 class="title">
+                    <div class="section-header wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                        <h6 class="subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">Welcome To
+                            Velora</h6>
+                        <h3 class="title wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
                             Digital Online Academy: Your Path to <span class="text-main">Creative Excellence</span>
                         </h3>
                     </div>
                     <div class="section-content position-relative">
-                        <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.</p>
-                        <ul>
+                        <p class="wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
+                            Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit.
+                        </p>
+                        <ul class="wow animate__animated animate__fadeInUp" data-wow-delay="1s">
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                                     <path fill="currentColor"
@@ -51,7 +55,9 @@
                             </li>
                         </ul>
 
-                        <a href="html/course-1.html" class="button button-lg button-outline-dark mt-4">
+                        <a href="html/course-1.html"
+                            class="button button-lg button-outline-dark mt-4 wow animate__animated animate__fadeInUp"
+                            data-wow-delay="1.2s">
                             Discover More
                             <i class='bx bx-right-arrow-alt ms-1'></i>
                         </a>
