--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -1,51 +1,63 @@
 <section class="section choose-us wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-lg-5 wow animate__animated animate__fadeInUp" data-wow-delay="0.3s"
+                data-wow-duration="1s">
                 <div class="section-text">
-                    <div class="section-header">
+                    <div class="section-header wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
+                        data-wow-duration="1s">
                         <h6 class="subtitle">Why Choose Us</h6>
-                        <h3 class="title mb-3">Transform Your Best Practice with Our <span class="text-main">Online Course</span></h3>
+                        <h3 class="title mb-3">Transform Your Best Practice with Our <span class="text-main">Online
+                                Course</span></h3>
                     </div>
-                    <div class="section-content">
-                        <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia deserunt mollit. Excepteur sint occaecat.</p>
-                        <div class="choose-feature-item">
+                    <div class="section-content wow animate__animated animate__fadeInUp" data-wow-delay="0.5s"
+                        data-wow-duration="1s">
+                        <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia
+                            deserunt mollit. Excepteur sint occaecat.</p>
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
+                            data-wow-duration="1s">
                             <div class="icon bg-soft-amber">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 2048 2048"><path fill="currentColor" d="M384 1536h128v128H256V384H128v1408h384v128H0V256h256V128h384q88 0 169 27t151 81q69-54 150-81t170-27h384v128h256v819l-128-58V384h-128v575l-128-59V256h-256q-71 0-136 24t-120 71v608l-128 58V351q-54-46-119-70t-137-25H384zm1408 255l-448 225l-448-225q0-36 1-76t8-81t20-77t36-67l-193-88v582H640v-640l704-320l704 320l-321 146l8 11q21 31 32 67t17 73t7 76t1 74m-448-627l-395 180l395 180l395-180zm0 709l320-161q-1-26-4-47t-11-41t-16-39t-23-42l-266 121l-266-121q-15 24-24 43t-16 38t-9 40t-4 49z"/></svg>
+                                <!-- SVG icon here -->
                             </div>
                             <div class="text">
                                 <h6>Face-To-Face Teaching</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is a for that an deserunt mollit.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item">
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.7s"
+                            data-wow-duration="1s">
                             <div class="icon bg-soft-purple">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M18.72 14.76c.35-.85.54-1.76.54-2.76c0-.72-.11-1.41-.3-2.05c-.65.15-1.33.23-2.04.23A9.07 9.07 0 0 1 9.5 6.34a9.2 9.2 0 0 1-4.73 4.88c-.04.25-.04.52-.04.78A7.27 7.27 0 0 0 12 19.27c1.05 0 2.06-.23 2.97-.64c.57 1.09.83 1.63.81 1.63c-1.64.55-2.91.82-3.78.82c-2.42 0-4.73-.95-6.43-2.66a9 9 0 0 1-2.24-3.69H2v-4.55h1.09a9.09 9.09 0 0 1 15.33-4.6a9 9 0 0 1 2.47 4.6H22v4.55h-.06L18.38 18l-5.3-.6v-1.67h4.83zm-9.45-2.99c.3 0 .59.12.8.34a1.136 1.136 0 0 1 0 1.6c-.21.21-.5.33-.8.33c-.63 0-1.14-.5-1.14-1.13s.51-1.14 1.14-1.14m5.45 0c.63 0 1.13.51 1.13 1.14s-.5 1.13-1.13 1.13s-1.14-.5-1.14-1.13a1.14 1.14 0 0 1 1.14-1.14"/></svg>
+                                <!-- SVG icon here -->
                             </div>
                             <div class="text">
                                 <h6>24/7 Support Available</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is a for that an deserunt mollit.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item">
+                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.8s"
+                            data-wow-duration="1s">
                             <div class="icon bg-soft-red">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 256 256"><path fill="currentColor" d="m226.53 56.41l-96-32a8 8 0 0 0-5.06 0l-96 32A8 8 0 0 0 24 64v80a8 8 0 0 0 16 0V75.1l33.59 11.19a64 64 0 0 0 20.65 88.05c-18 7.06-33.56 19.83-44.94 37.29a8 8 0 1 0 13.4 8.74C77.77 197.25 101.57 184 128 184s50.23 13.25 65.3 36.37a8 8 0 0 0 13.4-8.74c-11.38-17.46-27-30.23-44.94-37.29a64 64 0 0 0 20.65-88l44.12-14.7a8 8 0 0 0 0-15.18ZM176 120a48 48 0 1 1-86.65-28.45l36.12 12a8 8 0 0 0 5.06 0l36.12-12A47.9 47.9 0 0 1 176 120m-48-32.43L57.3 64L128 40.43L198.7 64Z"/></svg>
+                                <!-- SVG icon here -->
                             </div>
                             <div class="text">
                                 <h6>Interactive Learning Experience</h6>
-                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is a for that an deserunt mollit.</p>
+                                <p>Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia for this is
+                                    a for that an deserunt mollit.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 offset-lg-1">
+            <div class="col-12 col-lg-6 offset-lg-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.9s"
+                data-wow-duration="1s">
                 <div class="section-image text-start">
                     <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
                         <div class="icon me-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="text-amber mb-2" width="64" height="64" viewBox="0 0 24 24"><path fill="currentColor" d="M6 20c1.1 0 2-.9 2-2v-7c0-1.1-.9-2-2-2s-2 .9-2 2v7c0 1.1.9 2 2 2m10-5v3c0 1.1.9 2 2 2s2-.9 2-2v-3c0-1.1-.9-2-2-2s-2 .9-2 2m-4 5c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2s-2 .9-2 2v12c0 1.1.9 2 2 2"/></svg>
+                            <!-- SVG icon here -->
                         </div>
                         <div class="text">
                             <h6><span class="odometer" data-value="8540">0</span>K+</h6>
