--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             @@include('html/layouts/footer.html')
         </div>
 
-        <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
+        <!-- <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a> -->
     </div>
 
 
