--- a/src/html/sections/section-blog-article.html
+++ b/src/html/sections/section-blog-article.html
@@ -1,7 +1,7 @@
-<section class="section blog wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
+<section class="section blogwow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
     <div class="container">
         <div class="section-inner">
-            <div class="section-header d-lg-flex text-center text-lg-start">
+            <div class="section-header mb-4 d-lg-flex text-center text-lg-start">
                 <div class="flex-shrink-0">
                     <h6 class="subtitle">BLOG</h6>
                     <h3 class="title">
