Removed wow animation

--- a/src/html/sections/section-features.html
+++ b/src/html/sections/section-features.html
@@ -1,8 +1,7 @@
 <section class="section features wow animate__animated animate__fadeInUp" data-wow-delay="0.2s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-4 wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
-                data-wow-duration="1s">
+            <div class="col-12 col-lg-4">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
@@ -17,8 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
-                data-wow-duration="1s">
+            <div class="col-12 col-lg-4" data-wow-duration="1s">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 48 48">
@@ -34,8 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-4 wow animate__animated animate__fadeInUp" data-wow-delay="0.8s"
-                data-wow-duration="1s">
+            <div class="col-12 col-lg-4" data-wow-duration="1s">
                 <div class="feature-item">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
