--- a/src/html/sections/section-statistics.html
+++ b/src/html/sections/section-statistics.html
@@ -2,13 +2,12 @@
     <div class="container">
         <div class="stats-box">
             <div class="row">
-                <div class="col-12 col-lg-6 d-none d-lg-block wow animate__animated animate__fadeInUp"
-                    data-wow-delay="0.2s">
+                <div class="col-12 col-lg-6 d-none d-lg-block">
                     <div class="section-image">
                         <img src="assets/images/home/stats-img.png" alt="Image">
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+                <div class="col-12 col-lg-6">
                     <div class="section-text">
                         <div class="row">
                             <div class="col-12 col-lg-6">
