--- a/src/html/sections/section-about.html
+++ b/src/html/sections/section-about.html
@@ -11,7 +11,7 @@
                         alt="SVG Shape">
                 </div>
             </div>
-            <div class="col-12 col-lg-6 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">
+            <div class="col-12 col-lg-6">
                 <div class="section-text">
                     <div class="section-header">
                         <h6 class="subtitle">Welcome To
