--- a/src/html/sections/section-choose-us.html
+++ b/src/html/sections/section-choose-us.html
@@ -1,8 +1,7 @@
 <section class="section choose-us wow animate__animated animate__fadeInUp" data-wow-delay="0.1s" data-wow-duration="1s">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-lg-5 wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
-                data-wow-duration="1s">
+            <div class="col-12 col-lg-5">
                 <div class="section-text">
                     <div class="section-header">
                         <h6 class="subtitle">Why Choose Us</h6>
@@ -12,8 +11,7 @@
                     <div class="section-content">
                         <p class="mb-5">Excepteur sint occaecat cupidatat non proident sunt in culpa qui officia
                             deserunt mollit. Excepteur sint occaecat.</p>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.3s"
-                            data-wow-duration="1s">
+                        <div class="choose-feature-item" data-wow-duration="1s">
                             <div class="icon bg-soft-amber">
                                 <!-- SVG icon here -->
                             </div>
@@ -23,8 +21,7 @@
                                     a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
-                            data-wow-duration="1s">
+                        <div class="choose-feature-item" data-wow-duration="1s">
                             <div class="icon bg-soft-purple">
                                 <!-- SVG icon here -->
                             </div>
@@ -34,8 +31,7 @@
                                     a for that an deserunt mollit.</p>
                             </div>
                         </div>
-                        <div class="choose-feature-item wow animate__animated animate__fadeInUp" data-wow-delay="0.5s"
-                            data-wow-duration="1s">
+                        <div class="choose-feature-item" data-wow-duration="1s">
                             <div class="icon bg-soft-red">
                                 <!-- SVG icon here -->
                             </div>
@@ -49,8 +45,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-lg-6 offset-lg-1 wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
-                data-wow-duration="1s">
+            <div class="col-12 col-lg-6 offset-lg-1" data-wow-duration="1s">
                 <div class="section-image text-start">
                     <img src="assets/images/home/choose-img.png" data-speed="4" class="parallax-effect" alt="Image">
                     <div class="float-box-counter parallax-effect" data-speed="8">
