--- a/src/html/sections/section-courses-category.html
+++ b/src/html/sections/section-courses-category.html
@@ -14,7 +14,7 @@
                 </a>
             </div>
         </div>
-        <div class="section-content wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
+        <div class="section-content">
             <div class="row">
                 <div class="col-12 col-lg-3">
                     <div class="category-item">
