--- a/src/html/sections/section-courses.html
+++ b/src/html/sections/section-courses.html
@@ -7,8 +7,7 @@
         <div class="section-content">
             <div class="row">
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="0.2s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-1.jpg" alt="Course Image">
                         </div>
@@ -40,8 +39,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="0.4s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-2.jpg" alt="Course Image">
                         </div>
@@ -75,8 +73,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="0.6s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-3.jpg" alt="Course Image">
                         </div>
@@ -110,8 +107,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="0.8s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-4.jpg" alt="Course Image">
                         </div>
@@ -145,8 +141,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="1s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-5.jpg" alt="Course Image">
                         </div>
@@ -180,8 +175,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card course-card-item wow animate__animated animate__fadeInUp" data-wow-delay="1.2s"
-                        data-wow-duration="1s">
+                    <div class="card course-card-item" data-wow-duration="1s">
                         <div class="image">
                             <img src="assets/images/courses/course-img-6.jpg" alt="Course Image">
                         </div>
