--- a/src/html/sections/section-get-started.html
+++ b/src/html/sections/section-get-started.html
@@ -1,34 +1,32 @@
-<section class="section get-started">
+<section class="section get-started wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
     <div class="container">
         <div class="section-inner">
             <div class="row">
-                <div class="col-lg-5 wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                <div class="col-lg-5">
                     <div class="section-image">
                         <img src="assets/images/home/get-started.png" class="w-100" alt="Image">
                     </div>
                 </div>
-                <div class="col-lg-6 offset-lg-1 align-self-center wow animate__animated animate__fadeInUp"
-                    data-wow-delay="0.4s">
+                <div class="col-lg-6 offset-lg-1 align-self-center">
                     <div class="section-text">
-                        <h6 class="subtitle wow animate__animated animate__fadeInUp" data-wow-delay="0.6s">Our Started
+                        <h6 class="subtitle">Our Started
                             Now
                         </h6>
 
-                        <h3 class="title fw-light my-3 wow animate__animated animate__fadeInUp" data-wow-delay="0.8s">
+                        <h3 class="title fw-light my-3">
                             Affordable
                             Your
                             <span class="fw-bold">Online Courses</span> & Learning
                             Opportunities
                         </h3>
 
-                        <p class="text-white mb-4 wow animate__animated animate__fadeInUp" data-wow-delay="1s">
+                        <p class="text-white mb-4">
                             Excepteur sint
                             occaecat
                             cupidatat non proident sunt in culpa qui officia deserunt
                             mollit. Excepteur sint occaecat.</p>
 
-                        <a href="#" class="button button-white button-lg wow animate__animated animate__fadeInUp"
-                            data-wow-delay="1.2s">
+                        <a href="#" class="button button-white button-lg" data-wow-delay="1.2s">
                             Start Learning Today
                             <span><i class='bx bx-right-arrow-alt'></i></span>
                         </a>
